<resources>
    <string name="app_name">Inferno Infosec</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="aboutUs">INFERNO INFOSEC is a start up company in the field of Cyber Security and Ethical Hacking training. We have started from Vadodara city and about to expand all over Gujarat and Nation Wide. Knowing the current trends about Cyber Security <br>\nEthical Hacking, there is a huge career scope for the students in this field. Our training and module is designed in such a manner that it helps any student to get hands on practical knowledge in the field of IT security. We do provide multiple services based on cybe security and penetration testing. Such as Web App Pentesting, Mobile App Pentesting, Secure Code Review, Threat hunting, Compliance assessment and so on.</br></string>
    <string name="web_pent">Our Web Application Security Testing Service distinguishes specialized and business logic vulnerabilities in your sites while giving you definite directions and solid suggestions. Even with the dawn of machine learning programs, there are still items that require human actions to accurately determine, or to verify. This is where the manual penetration tester is so important. If an organization only focuses on a firm that uses automatic vulnerability scanners, critical items could be missed. Those missed items needs to be reviewed by the manual pentesting teams. The Manual Pentesting approach we do follow consists of below mentioned points.\n\n<br>1) Our reports provide step-by-step POCs and detailed fix information with code and config examples \n</br><br>2) Identifies both technical (OWASP Top 10, WASC 25, etc) and business logic vulnerabilities \n</br><br>3) We create an in-depth map of your web-application business-logic and workflow \n</br><br>4) Experts manually create specific test-cases for your web-application logic and workflow \n</br>
    </string>
    <string name="app_pentesting_desc">Our Mobile App Pentesting Service provide comprehensive coverage for your application infrastructure, the back-end web-services and the core business logic that powers the platform. The goal of our mobile application security testing service is to fully validate your applications against all types of attacks against the core application, back-end APIs, business logic etc\n\n<br>Expert Driven Manual Testing \n\n</br><br>Our elite team of experts manually review the application, its internals and its API calls to carry out a comprehensive security assessment. This includes:\n\n</br><br>Creating a step-by-step mindmap of the application functionality, data flow, back-end API calls and business logic.\n\n</br><br>Creating test-cases of abuse scenarios to identify business logic vulnerabilities in the application flow.\n\n</br><br>Leveraging our AI + ML based platform to identify potential gaps, vulnerabilities and abuse scenarios based on data from thousands of client engagements</br></string>
    <string name="net_pent_desc">The primary objective for a network penetration test is to identify exploitable vulnerabilities in networks, systems, hosts and network devices (ie: routers, switches) before hackers are able to discover and exploit them. Network penetration testing will reveal real-world opportunities for hackers to be able to compromise systems and networks in such a way that allows for unauthorized access to sensitive data or even take-over systems for malicious/non-business purposes.\n\n<br>Our Approach:-\n</br>1) Understand the network setup 2) Monitor the Network Traffic 3) Check configurations 4) Protocol Analysis 5) Data Error rate 6) System Reviews 7) Post Analysis</string>
    <string name="code_rev_desc"><![CDATA[Most of the vulnerabilities in applications are due to security loopholes arising out of insecure coding practices. Source Code reviews are an effective method for finding bugs that can be difficult or impossible to find during black box or grey box testing. Our expert developers and security architects conduct a fast and effective code review armed with a comprehensive checklist of common implementation and architecture errors. Our expert team is hence able to quickly assess your code and provide you with a report containing all vulnerabilities discovered during the analysis part. A Source Code security review exercise (also known as white-box application assessment) is an effective and fool proof mechanism to discover design-level & code-level security flaws in business applications.]]></string>
    <string name="threat_hunt_desc">Using deep analytics, we continuously monitor your endpoints for a cyber threat. Our machine learning algorithms triage every alert for suspicious activity, investigate its spread and stop the attack with our threat hunting tools. Our threat hunting experts then verify these outputs to remove false positives and query the data information and systems further to detect attacks and a cyber threat that may have bypassed other security controls.<br>\n\nBenefits of Threat Hunting:</br><br>\nReduce time and cost of investigations</br><br>\nUnderstand your risks and prioritise accordingly </br><br>\nIdentify previously unknown threats </br><br>\nMake investment decisions based on increased </br><br>\ndetection accuracy </br><br>\nAgile remediation </br><br>\nGain full visibility of your endpoints </br><br>\nKeep your organisation as secure as possible at all times</br></string>
    <string name="threat_inte_desc">Threat Intelligence is the process of understanding new risks and threats occurring on organisations. This information is being used to prevent and identify upcoming cyber threats which can lead to data breach. Threat intelligence is evidence-based knowledge, including context, mechanisms, indicators, implications and action-oriented advice about an existing or emerging menace or hazard to assets. This intelligence can be used to inform decisions regarding the subjectâ€™s response to that menace or hazard.</string>
    <string name="int_resp_desc">Is your organization incident-ready ? A threat event can lead to loss of, or disruption to your organization\'s operations. A well-defined incident response plan allows you to effectively identify, minimize the damage, and reduce the cost of a cyber attack, while finding and fixing the cause to prevent future attacks. Complete cyber incident response. From investigation to crisis management, Mandiant incident response helps resolve all aspects of cyber breaches with industry-leading expertise, from thorough technical investigation to containment and recovery.Our Cyber team provides round the clock incident monitoring and detecting suspicious events that can make you incident-ready.</string>
    <string name="comp_assess_desc">Backdoors, unauthorized access and anomalous activity can compromise your confidential data and affect your security. Our team of hackers, can assess your network and identify endpoints which are open and can be easily compromised. Get to know your undiscovered access points before it gets unauthorized access.</string>
    <string name="id_men_desc">Managing identities, authentication, and authorization, saving IT time and money and reducing risk to the business. Define and manage the roles and access privileges within your organization to ensure confidentiality and integrity.</string>
    <string name="sec_rev_desc">Deploying of new security enhancements has its own risks. It is vital to review the architecture of these deployments especially when you have invested heavily in these areas. Our security team will help you assess the quality of these deployments and give you suggestions based on the review.</string>
    <string name="conf_aud_desc">Ensuring the quality of your product according to the blueprints and ensuring that it meets its functional requirements is important. We help you in assessing the quality of your product by conducting a configuration audit and delivering the right solutions.</string>
    <string name="comp_desc"><![CDATA[Organizations fail to comply with industry regulations & laws and face hefty fines and also lose upon their business. We, at Inferno Infosec, helps organizations to mitigate the exposure of risks by adhering to widely used compliance frameworks such as ISO 27001 & PCI-DSS.]]></string>
    <string name="third_party_desc">Is your vendor organisation as secure as yours ? It is important to check the security of your supplier or vendor before you share your company data with them. We provide Vendor Risk Assessment services which help to identify, evaluate and assess potential areas of risk of your vendor.</string>
    <string name="cyber_stra_desc">Have a business online ? Get top notch guidance and strategic solutions on Cybersecurity on securing your premises and information systems by consulting with us. We provide Cybersecurity consulting and IT Risk advisory services to help your organization grow in a safe and secure manner.</string>
</resources>