<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Threat Hunting"
                    android:textColor="@color/black"
                android:fontFamily="@font/gfs_didot"
                android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/threat_hunting"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/threat_hunt_desc"
                    android:layout_margin="18dp"
                    android:textDirection="ltr"
                    android:fontFamily="@font/gfs_didot"
                    android:textColor="@color/black"
                   android:layout_gravity="left"
                    android:textAlignment="gravity"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Threat Intelligence"
                    android:textColor="@color/black"
                android:fontFamily="@font/gfs_didot"
                android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/threat_intelligence"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/threat_inte_desc"
                    android:layout_margin="18dp"
                    android:textDirection="ltr"
                    android:fontFamily="@font/gfs_didot"
                    android:textColor="@color/black"
                   android:layout_gravity="left"
                    android:textAlignment="gravity"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Incident Response"
                    android:textColor="@color/black"
                android:fontFamily="@font/gfs_didot"
                android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/incident_response"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/int_resp_desc"
                    android:layout_margin="18dp"
                    android:textDirection="ltr"
                    android:fontFamily="@font/gfs_didot"
                    android:textColor="@color/black"
                   android:layout_gravity="left"
                    android:textAlignment="gravity"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Compromised Assessment"
                    android:textColor="@color/black"
                android:fontFamily="@font/gfs_didot"
                android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/compromise_assessment"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comp_assess_desc"
                    android:layout_margin="18dp"
                    android:textDirection="ltr"
                    android:fontFamily="@font/gfs_didot"
                    android:textColor="@color/black"
                   android:layout_gravity="left"
                    android:textAlignment="gravity"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</ScrollView>